--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-native-community/blur": "^4.4.0",
     "@react-native-community/slider": "4.4.2",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~50.0.14",
+    "expo": "^51.0.14",
     "expo-font": "~11.10.3",
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
@@ -36,6 +36,7 @@
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6"
   },
